--- a/src/scss/components/memberPage/_position.scss
+++ b/src/scss/components/memberPage/_position.scss
@@ -14,8 +14,8 @@
 
 .memberpage-position-cards-container {
   display: grid;
-  grid-column-gap: 3rem;
-  grid-row-gap: 2rem;
+  grid-column-gap: 4rem;
+  grid-row-gap: 3rem;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
